Add select in user form

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,8 +2,8 @@
 <div *ngIf="users"></div>
 <table>
   <tr>
-    <td>Id</td>
-    <td>Papel</td>
+    <td>ID</td>
+    <td>Categoria</td>
     <td>Nome</td>
     <td>Username</td>
     <td>e-mail</td>
