--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,16 +1,35 @@
 <h3>Cadastro</h3>
 
 <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+  <label for="_id">
+    ID:
+    <input type="text" formControlName="_id">
+  </label>
+  <br>
+  <label>
+    Categoria
+    <select formControlName="role">
+      <option *ngFor="let role of roles" [ngValue]="role">
+        {{role}}
+      </option>
+    </select>
+  </label>
+  <br>
   <label for="name">
     Nome:
-    <input type="text" formControlName="name">
+    <input type="text" formControlName="name" required minlength="3" maxlength="100">
   </label>
   <br>
   <label for="username">
     Username:
-    <input type="text" formControlName="username">
+    <input type="text" formControlName="username" required minlength="3" maxlength="15">
+  </label>
+  <br>
+  <label for="email">
+    E-mail:
+    <input type="email" formControlName="email">
   </label>
     
-    <br>
-    <button type="submit" [disabled]="!userForm.valid">Salvar</button>
+  <br>
+  <button type="submit" [disabled]="!userForm.valid">Salvar</button>
 </form>
