Add user filter pipe. Adapt user form and user componentes to filter pipe.

--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -10,7 +10,7 @@
     Categoria
     <select formControlName="role">
       <option *ngFor="let role of roles" [ngValue]="role">
-        {{role}}
+        {{role | titlecase}}
       </option>
     </select>
   </label>
