--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,15 @@
 <h2>Usuários</h2>
+<div>
+  <fieldset>FILTROS
+    <br>
+    <label>Categoria:
+      <select [(ngModel)]="roleFilter">
+        <option value="" selected>Todos</option>
+        <option *ngFor="let role of roles">{{ role | titlecase }}</option>
+      </select>
+    </label> 
+  </fieldset>
+</div>
 <div *ngIf="users"></div>
 <table>
   <tr>
@@ -8,9 +19,9 @@
     <td>Username</td>
     <td>e-mail</td>
   </tr>
-  <tr *ngFor="let user of users">
+  <tr *ngFor="let user of (users | userFilter:roleFilter)">
     <td>{{user._id}}</td>
-    <td>{{user.role}}</td>
+    <td>{{user.role | titlecase}}</td>
     <td>{{user.name}}</td>
     <td>{{user.username}}</td>
     <td>{{user.email}}</td>
