Add delete function without implementation

--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -33,3 +33,6 @@
   <br>
   <button type="submit" [disabled]="!userForm.valid">Salvar</button>
 </form>
+
+<br>
+<button (click)="onDelete()">Delete</button>
