--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -10,6 +10,7 @@
     </label> 
   </fieldset>
 </div>
+<div><button routerLink="form/">Novo</button></div>
 <div *ngIf="users"></div>
 <table>
   <tr>
@@ -18,6 +19,7 @@
     <td>Nome</td>
     <td>Username</td>
     <td>e-mail</td>
+    <td>Ações</td>
   </tr>
   <tr *ngFor="let user of (users | userFilter:roleFilter)">
     <td>{{user._id}}</td>
@@ -25,7 +27,7 @@
     <td>{{user.name}}</td>
     <td>{{user.username}}</td>
     <td>{{user.email}}</td>
+    <!-- <td><button (click)="onEdit(user)">Editar</button></td> -->
+    <button routerLink="edit/{{user._id}}">Editar</button>
   </tr>
 </table>
-
-<app-user-form (newUserEvent)="addUser($event)" ></app-user-form>
