Add create random users using array mock

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -10,7 +10,10 @@
     </label> 
   </fieldset>
 </div>
-<div><button routerLink="form/">Novo</button></div>
+<div>
+  <button routerLink="form/">Novo</button>
+  <button routerLink="random/">(+ aleatorio)</button>
+</div>
 <div *ngIf="users"></div>
 <table>
   <tr>
