Add CRUD for users accessing api with mongodb

--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -25,6 +25,11 @@
     <input type="text" formControlName="username" required minlength="3" maxlength="15">
   </label>
   <br>
+  <label for="password">
+    Password:
+    <input type="password" formControlName="password" required minlength="3" maxlength="150">
+  </label>
+  <br>
   <label for="email">
     E-mail:
     <input type="email" formControlName="email">
