--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -14,23 +14,24 @@
   <button routerLink="form/">Novo</button>
   <button routerLink="random/">(+ aleatorio)</button>
 </div>
-<div *ngIf="users"></div>
-<table>
-  <tr>
-    <td>ID</td>
-    <td>Categoria</td>
-    <td>Nome</td>
-    <td>Username</td>
-    <td>e-mail</td>
-    <td>Ações</td>
-  </tr>
-  <tr *ngFor="let user of (users | userFilter:roleFilter)">
-    <td>{{user._id}}</td>
-    <td>{{user.role | titlecase}}</td>
-    <td>{{user.name}}</td>
-    <td>{{user.username}}</td>
-    <td>{{user.email}}</td>
-    <button routerLink="edit/{{user._id}}">Editar</button>
-    <button (click)="removeUser(user_id)">Deletar</button>
-  </tr>
-</table>
+<div *ngIf="users">
+  <table>
+    <tr>
+      <td>ID</td>
+      <td>Categoria</td>
+      <td>Nome</td>
+      <td>Username</td>
+      <td>e-mail</td>
+      <td>Ações</td>
+    </tr>
+    <tr *ngFor="let user of (users | userFilter:roleFilter)">
+      <td>{{user._id}}</td>
+      <td>{{user.role | titlecase}}</td>
+      <td>{{user.name}}</td>
+      <td>{{user.username}}</td>
+      <td>{{user.email}}</td>
+      <button routerLink="edit/{{user._id}}">Editar</button>
+      <button routerLink="remove/{{user._id}}">Deletar</button>
+    </tr>
+  </table>
+</div>
