Add temporary search by role

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -35,3 +35,13 @@
     </tr>
   </table>
 </div>
+
+<div>
+  <input type="text" placeholder="Buscar usuário" [(ngModel)]="text">
+  <button (click)="find(text)">Buscar</button>
+    <ul *ngIf="foundUsers">
+      <li *ngFor="let foundUser of foundUsers">
+        {{foundUser.role}} - {{foundUser.name}} - {{foundUser.name}}
+      </li>
+    </ul>
+</div>
