--- a/src/app/user-search/user-search.component.html
+++ b/src/app/user-search/user-search.component.html
@@ -1,10 +1,11 @@
 <div>
+  <h2>Buscar usuários</h2>
   <input type="text" id="search-box" #searchBox placeholder="Buscar usuário"
       (input)="search(searchBox.value)">
   <button (click)="search(searchBox.value)">Buscar</button>
     <ul class="search-result">
       <li *ngFor="let user of users$ | async">
-        {{user.role}} - {{user.name}} - {{user.name}}
+        {{user.role}} - {{user.name}} - {{user.name}} - {{user.email}}
       </li>
     </ul>
 </div>
