--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -14,7 +14,7 @@
   <button routerLink="form/">Novo</button>
   <button routerLink="random/">(+ aleatorio)</button>
 </div>
-<div *ngIf="users">
+<!-- <div *ngIf="users$"> -->
   <table>
     <tr>
       <td>ID</td>
@@ -24,7 +24,8 @@
       <td>e-mail</td>
       <td>Ações</td>
     </tr>
-    <tr *ngFor="let user of (users | userFilter:roleFilter)">
+    <!-- <tr *ngFor="let user of (users$ | userFilter:roleFilter | async)"> -->
+    <tr *ngFor="let user of (users$ | async)">
       <td>{{user._id}}</td>
       <td>{{user.role | titlecase}}</td>
       <td>{{user.name}}</td>
@@ -33,9 +34,10 @@
       <td>
         <button routerLink="edit/{{user._id}}">Editar</button>
         <button routerLink="remove/{{user._id}}">Deletar</button>
+        <!-- <button (click)="deleteUser(user._id)">Deletar</button> -->
       </td>
     </tr>
   </table>
-</div>
+<!-- </div> -->
 
 <app-user-search></app-user-search>
