Fix routes, enable login flag

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,9 @@
           <ul class="main-nav js--main-nav">
               <li><a routerLink="/">Home</a></li>
               <li><a routerLink="/login">Entrar</a></li>
+              <li><a routerLink="/logout">Sair</a></li>
               <!-- TODO ADMIN AUTH -->
-              <li><a routerLink="/users">Usuários</a></li>
+              <li><a routerLink="/users" routerLinkActive="active">Usuários</a></li>
               <li><a routerLink="/courses">Cursos</a></li>
           </ul>
       </div>
