Add courses no-auth component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
               <!-- TODO ADMIN AUTH -->
               <li><a routerLink="/users" routerLinkActive="active">Usuários</a></li>
               <li><a routerLink="/courses">Cursos</a></li>
+              <li><a routerLink="/courses-noauth">Cursos-noauth</a></li>
           </ul>
       </div>
       <!-- <img src="resources/img/logo-blue0.png" alt="logo mobCursos" class="logo"> -->
