--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,77 +1,118 @@
-<div *ngIf="userRole=='admin'">
-  <h2 >Cursos</h2>
-  <div>
-    <button routerLink="form/">Novo</button>
-    <button routerLink="random/">(+ aleatorio)</button>
-  </div>
+<h2>{{title}}</h2>
+<div>
+  <button routerLink="search/">Procurar</button>
+</div>
+
+<div *ngIf="!this.authService.isLoggedIn; else elseBlock">
+  
   <div *ngIf="courses">
     <table>
       <tr>
-        <td>ID</td>
-        <td>Curso</td>
+        <td>Nome</td>
         <td>Descrição</td>
         <td>Ações</td>
       </tr>
       <tr *ngFor="let course of courses">
-        <td>{{course._id}}</td>
         <td>{{course.name}}</td>
         <td>{{course.description}}</td>
+        <!-- TODO: create logic on TS to unauth users - Register or Login -->
         <td>
-          <button routerLink="edit/{{course._id}}">Editar</button>
-          <button routerLink="remove/{{course._id}}">Deletar</button>
+          <button routerLink="subscribe/">Inscrever-se</button>
         </td>
       </tr>
     </table>
   </div>
 </div>
 
-<div *ngIf="userRole=='student'">
-  <h2>Meus Cursos</h2>
-  <div *ngIf="courses">
-    <table>
-      <tr>
-        <td>Curso</td>
-        <td>Descrição</td>
-        <td>Instrutor(a)</td>
-        <td>Ações</td>
-      </tr>
-      <tr *ngFor="let course of courses">
-        <td>{{course.name}}</td>
-        <td>{{course.description}}</td>
-        <td>{{course.teacher.name}}</td>
-        <td>
-          <button (click)="unsubscribe(course._id)">Cancelar inscrição</button>
-        </td>
-      </tr>
-    </table>
-  </div>
-</div>
+<ng-template #elseBlock>
+  <container [ngSwitch]="userRole">
+    <div *ngSwitchCase="'admin'">
+      <div>
+        <button routerLink="form/">Novo</button>
+        <button routerLink="random/">(+ aleatorio)</button>
+      </div>
+      <div *ngIf="courses">
+        <table>
+          <tr>
+            <td>ID</td>
+            <td>Curso</td>
+            <td>Descrição</td>
+            <td>Ações</td>
+          </tr>
+          <tr *ngFor="let course of courses">
+            <td>{{course._id}}</td>
+            <td>{{course.name}}</td>
+            <td>{{course.description}}</td>
+            <td>
+              <button routerLink="edit/{{course._id}}">Editar</button>
+              <button routerLink="remove/{{course._id}}">Deletar</button>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
 
-<div *ngIf="userRole=='teacher'">
-  <h2>Meus Cursos</h2>
-  <div>
-    <button routerLink="form/">Novo</button>
-    <button routerLink="random/">(+ aleatorio)</button>
-  </div>
-  <div *ngIf="courses">
-    <table>
-      <tr>
-        <td>Curso</td>
-        <td>Descrição</td>
-        <td>Alunos</td>
-        <td>Ações</td>
-      </tr>
-      <tr *ngFor="let course of courses">
-        <td>{{course.name}}</td>
-        <td>{{course.description}}</td>
-        <td>
-          <ul *ngFor="let student of course.students">
-            {{student.name}}
-          </ul>
-        <td>
-          <button routerLink="edit/{{course._id}}">Editar info</button>
-        </td>
-      </tr>
-    </table>
-  </div>
-</div>
+    <div *ngSwitchCase="'teacher'">
+      <div *ngIf="isOwnCourses">
+        <button routerLink="form/">Novo</button>
+        <button routerLink="random/">(+ aleatorio)</button>
+      </div>
+      <div *ngIf="courses">
+        <table>
+          <tr>
+            <td>Curso</td>
+            <td>Descrição</td>
+            <td *ngIf="isOwnCourses">Alunos</td>
+            <td *ngIf="isOwnCourses">Ações</td>
+          </tr>
+          <tr *ngFor="let course of courses">
+            <td>{{course.name}}</td>
+            <td>{{course.description}}</td>
+            <td *ngIf="isOwnCourses">
+              <ol>
+                <li *ngFor="let student of course.students">
+                  {{student.name}}
+                </li>
+              </ol>
+            <td *ngIf="isOwnCourses">
+              <button *ngIf="isOwnCourses"
+                      routerLink="edit/{{course._id}}">Editar info
+              </button>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <div *ngSwitchCase="'student'">
+      <div *ngIf="courses">
+        <table>
+          <tr>
+            <td>Curso</td>
+            <td>Descrição</td>
+            <td>Instrutor(a)</td>
+            <td>Ações</td>
+          </tr>
+          <tr *ngFor="let course of courses">
+            <td>{{course.name}}</td>
+            <td>{{course.description}}</td>
+            <td>{{course.teacher.name}}</td>
+            <td>
+              <button *ngIf="isOwnCourses"
+                      (click)="unsubscribe(course._id)">Cancelar inscrição
+              </button>
+              <button *ngIf="!isOwnCourses"
+                      (click)="subscribe(course._id)">Inscrever-se
+              </button>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <div *ngSwitchDefault>
+      <p>Error</p>
+    </div>
+
+  </container>
+</ng-template>
