--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -5,14 +5,14 @@
 
 <div *ngIf="!this.authService.isLoggedIn; else elseBlock">
   
-  <div *ngIf="courses">
+  <div *ngIf="courses$">
     <table>
       <tr>
         <td>Nome</td>
         <td>Descrição</td>
         <td>Ações</td>
       </tr>
-      <tr *ngFor="let course of courses">
+      <tr *ngFor="let course of (courses$ | async)">
         <td>{{course.name}}</td>
         <td>{{course.description}}</td>
         <!-- TODO: create logic on TS to unauth users - Register or Login -->
@@ -31,7 +31,7 @@
         <button routerLink="form/">Novo</button>
         <button routerLink="random/">(+ aleatorio)</button>
       </div>
-      <div *ngIf="courses">
+      <div *ngIf="courses$">
         <table>
           <tr>
             <td>ID</td>
@@ -39,7 +39,7 @@
             <td>Descrição</td>
             <td>Ações</td>
           </tr>
-          <tr *ngFor="let course of courses">
+          <tr *ngFor="let course of (courses$ | async)">
             <td>{{course._id}}</td>
             <td>{{course.name}}</td>
             <td>{{course.description}}</td>
@@ -57,7 +57,7 @@
         <button routerLink="form/">Novo</button>
         <button routerLink="random/">(+ aleatorio)</button>
       </div>
-      <div *ngIf="courses">
+      <div *ngIf="courses$">
         <table>
           <tr>
             <td>Curso</td>
@@ -65,7 +65,7 @@
             <td *ngIf="isOwnCourses">Alunos</td>
             <td *ngIf="isOwnCourses">Ações</td>
           </tr>
-          <tr *ngFor="let course of courses">
+          <tr *ngFor="let course of (courses$ | async)">
             <td>{{course.name}}</td>
             <td>{{course.description}}</td>
             <td *ngIf="isOwnCourses">
@@ -85,7 +85,7 @@
     </div>
 
     <div *ngSwitchCase="'student'">
-      <div *ngIf="courses">
+      <div *ngIf="courses$">
         <table>
           <tr>
             <td>Curso</td>
@@ -93,7 +93,7 @@
             <td>Instrutor(a)</td>
             <td>Ações</td>
           </tr>
-          <tr *ngFor="let course of courses">
+          <tr *ngFor="let course of (courses$ | async)">
             <td>{{course.name}}</td>
             <td>{{course.description}}</td>
             <td>{{course.teacher.name}}</td>
