Remove paramMap for getUsers Add getCourses for methods to update the observable

--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -78,6 +78,7 @@
               <button *ngIf="isOwnCourses"
                       routerLink="edit/{{course._id}}">Editar info
               </button>
+              <button (click)="deleteCourse(course._id)">Excluir</button>
             </td>
           </tr>
         </table>
