--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -24,8 +24,7 @@
       <td>e-mail</td>
       <td>Ações</td>
     </tr>
-    <!-- <tr *ngFor="let user of (users$ | userFilter:roleFilter | async)"> -->
-    <tr *ngFor="let user of (users$ | async)">
+    <tr *ngFor="let user of (users$ | async) | userFilter:roleFilter">
       <td>{{user._id}}</td>
       <td>{{user.role | titlecase}}</td>
       <td>{{user.name}}</td>
@@ -33,8 +32,7 @@
       <td>{{user.email}}</td>
       <td>
         <button routerLink="edit/{{user._id}}">Editar</button>
-        <button routerLink="remove/{{user._id}}">Deletar</button>
-        <!-- <button (click)="deleteUser(user._id)">Deletar</button> -->
+        <button (click)="deleteUser(user._id)">Excluir</button>
       </td>
     </tr>
   </table>
