--- a/src/app/users/user-search/user-search.component.html
+++ b/src/app/users/user-search/user-search.component.html
@@ -2,10 +2,9 @@
   <h2>Buscar usuários</h2>
   <input type="text" id="search-box" #searchBox placeholder="Buscar usuário"
       (input)="search(searchBox.value)">
-  <button (click)="search(searchBox.value)">Buscar</button>
     <ul class="search-result">
       <li *ngFor="let user of users$ | async">
-        {{user.role}} - {{user.name}} - {{user.name}} - {{user.email}}
+        {{user.role}} - {{user.name}} - {{user.username}} - {{user.email}}
       </li>
     </ul>
 </div>
