--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -21,5 +21,5 @@
   
 </form>
 
-<button (click)="onReset()">{{resetButtonText}}</button>
-<button (click)="goBack()">{{backButtonText}}</button>
+<button  class="btn btn-primary" (click)="onReset()">{{resetButtonText}}</button>
+<button  class="btn btn-primary" (click)="goBack()">{{backButtonText}}</button>
