--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -40,5 +40,5 @@
   
 </form>
 
-<button (click)="onReset()">{{resetButtonText}}</button>
-<button (click)="goBack()">{{backButtonText}}</button>
+<button  class="btn btn-primary" (click)="onReset()">{{resetButtonText}}</button>
+<button  class="btn btn-primary" (click)="goBack()">{{backButtonText}}</button>
