--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,9 +47,12 @@
   </div>
 </nav>
 
-<span class="badge badge-info" *ngIf="this.authService.isLoggedIn">
-  Sessão finaliza em: {{authService.getRemainingSessionTime() | sessionCounter }}
-</span>
+<div class="d-flex flex-row justify-content-end m-1">
+    <span class="badge badge-info" *ngIf="this.authService.isLoggedIn">
+      Sessão finaliza em: {{authService.getRemainingSessionTime() | sessionCounter }}
+    </span>
+</div>
+
 
 <div class="d-flex justify-content-center">
 <router-outlet></router-outlet>
