Fix table and add style for list components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
 </nav>
 
 <div class="d-flex flex-row justify-content-end m-1">
-    <span class="badge badge-info" *ngIf="this.authService.isLoggedIn">
+    <span class="badge badge-secondary" *ngIf="this.authService.isLoggedIn">
       Sessão finaliza em: {{authService.getRemainingSessionTime() | sessionCounter }}
     </span>
 </div>
