--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -11,30 +11,34 @@
   </fieldset>
 </div>
 <div>
-  <button  class="btn btn-primary" routerLink="form/">Novo</button>
-  <button  class="btn btn-primary" routerLink="random/">(+ aleatorio)</button>
+  <button  class="btn btn-success m-1" routerLink="form/">Novo</button>
+  <button  class="btn btn-secondary" routerLink="random/">(+ aleatorio)</button>
 </div>
 <!-- <div *ngIf="users$"> -->
-  <table>
-    <tr>
-      <td>ID</td>
-      <td>Categoria</td>
-      <td>Nome</td>
-      <td>Username</td>
-      <td>e-mail</td>
-      <td>Ações</td>
-    </tr>
-    <tr *ngFor="let user of (users$ | async) | userFilter:roleFilter">
-      <td>{{user._id}}</td>
-      <td>{{user.role | titlecase}}</td>
-      <td>{{user.name}}</td>
-      <td>{{user.username}}</td>
-      <td>{{user.email}}</td>
-      <td>
-        <button  class="btn btn-primary" routerLink="edit/{{user._id}}">Editar</button>
-        <button  class="btn btn-danger" (click)="deleteUser(user._id)">Excluir</button>
-      </td>
-    </tr>
+  <table class="table" >
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Categoria</th>
+        <th>Nome</th>
+        <th>Username</th>
+        <th>e-mail</th>
+        <th>Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of (users$ | async) | userFilter:roleFilter">
+        <td>{{user._id}}</td>
+        <td>{{user.role | titlecase}}</td>
+        <td>{{user.name}}</td>
+        <td>{{user.username}}</td>
+        <td>{{user.email}}</td>
+        <td>
+          <button  class="btn btn-primary mx-1" routerLink="edit/{{user._id}}">Editar</button>
+          <button  class="btn btn-danger" (click)="deleteUser(user._id)">Excluir</button>
+        </td>
+      </tr>
+    </tbody>
   </table>
 <!-- </div> -->
 
