Add bootstrap to login component Fix spacing on users and courses list components

--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -33,7 +33,7 @@
   <container [ngSwitch]="userRole">
     <div *ngSwitchCase="'admin'">
       <div>
-        <button  class="btn btn-success m-1" routerLink="form/">Novo</button>
+        <button  class="btn btn-success my-1 mr-1" routerLink="form/">Novo</button>
         <button  class="btn btn-secondary" routerLink="random/">(+ aleatorio)</button>
       </div>
       <div *ngIf="courses$">
@@ -63,7 +63,7 @@
 
     <div *ngSwitchCase="'teacher'">
       <div *ngIf="isOwnCourses">
-        <button  class="btn btn-success m-1" routerLink="form/">Novo</button>
+        <button  class="btn btn-success my-1 mr-1" routerLink="form/">Novo</button>
         <button  class="btn btn-primary" routerLink="random/">(+ aleatorio)</button>
       </div>
       <div *ngIf="courses$">
