--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -11,7 +11,7 @@
   </fieldset>
 </div>
 <div>
-  <button  class="btn btn-success m-1" routerLink="form/">Novo</button>
+  <button  class="btn btn-success my-1 mr-1" routerLink="form/">Novo</button>
   <button  class="btn btn-secondary" routerLink="random/">(+ aleatorio)</button>
 </div>
 <!-- <div *ngIf="users$"> -->
