--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,20 +1,21 @@
 <div class="" *ngIf="!this.authService.isLoggedIn">
   <h2>Login</h2>
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <label for="username">Usuário</label>
-    <input type="text" formControlName="username" required minlength="3" maxlength="15">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-group">
+    <!-- <label for="username">Usuário</label> -->
+    <input type="text" class="form-control" formControlName="username" placeholder="Usuário" required minlength="3" maxlength="15">
     <br>
-    <label for="password">Senha</label>
-    <input type="password" formControlName="password" required minlength="3" maxlength="150">
+    <!-- <label for="password">Senha</label> -->
+    <input type="password" class="form-control" formControlName="password" placeholder="Senha" required minlength="3" maxlength="150">
     <br>
-    <input type="submit" [disabled]="!loginForm.valid" value="Entrar">
+    <input type="submit" class="btn btn-primary" [disabled]="!loginForm.valid" value="Entrar">
   </form>
 </div>
 
 <div *ngIf="this.authService.isLoggedIn">
   <h2>Logout</h2>
   <p>Confirma encerrar a sessão?</p>
-  <button  class="btn btn-primary" (click)="logout()">Sim</button>
+  <button  class="btn btn-danger mr-1" (click)="logout()">Sim</button>
+  <button  class="btn btn-secondary" (click)="goBack()">Cancelar</button>
 </div>
-<div><button  class="btn btn-secondary" (click)="goBack()">Cancelar</button></div>
+
 
